--- a/src/static/global-styles/_modal.scss
+++ b/src/static/global-styles/_modal.scss
@@ -2,7 +2,7 @@
 @import "./functions";
 
 .modal {
-  z-index: 9998;
+  z-index: 9997;
 
   &-content {
     background-color: $light-bg;
